# agent-public

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  release-please-config.json
docs/superpowers/specs/: 2026-07-10-azure-iam-v2-design.md
src/: app.rs  config.rs  engine_ext.rs  immutable_loader.rs  lib.rs  main.rs  telemetry.rs
src/data/: extended_decision.rs  mod.rs  release_data.rs
src/provider/: azure_storage.rs  filesystem.rs  gcs.rs  mod.rs  s3.rs  zip.rs
src/routes/: decision_points.rs  engine.rs  infra.rs  mod.rs  project_info.rs
src/util/: prefix.rs
tests/: agent.rs  engine.rs  health.rs
tests/support/: azurite.rs  minio.rs  mod.rs  path.rs
